--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   http:
   flutter:
     sdk: flutter
+  auto_size_text: ^3.0.0
+  flutter_local_notifications: ^10.0.0
+  workmanager: ^0.5.0 # for background tasks
+  
 
 
   # The following adds the Cupertino Icons font to your application.
