--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,18 @@
+buildscript {
+    ext.koylin_version = '1.6.10'
+    repositories{
+        google()
+        mavenCentral()
+    }
+
+    dependencies{
+        classpath 'com.google.gms:google-services:4.4.2'
+          
+    }
+}
+
+
+
 allprojects {
     repositories {
         google()
