--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.1
+
+
+flutter_icons:
+  android: true      # For Android icons
+  ios: true          # For iOS icons
+  image_path: "assets/images/logo.jpeg"  
+  adaptive_icon: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
